Add CSS styles and links to login and index pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/main.css" />
     <title>Main</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>About ME</h1>
+      <h1>About ME</h1>
+      <ul>
+        <li><a href="/zhenyaLogin">Log In</a></li>
+        <li><a href="/sign">Sign Up</a></li>
+      </ul>
     </header>
-
-</body>
+    <main></main>
+    <footer>
+      <p>Copyright &copy; 2024</p>
+    </footer>
+  </body>
 </html>
