--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,16 +3,278 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/main.css" />
-    <title>Main</title>
+    <title>Personal Portfolio</title>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/assets/style.css" />
   </head>
   <body>
-    <header>
-      <h1>About ME</h1>
-    </header>
-    <main></main>
+    <nav>
+      <div class="logo">
+        <img src="assets/img/logo.png" />
+        <a href="https://github.com/daskie911">Yauheni Buka</a>
+      </div>
+      <ul>
+        <li><a href="#main">Home</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#feedback">Feedback</a></li>
+      </ul>
+      <button>Contact Me</button>
+      <button id="menuButton" onclick="openMenu()">
+        <i class="bx bx-menu"></i>
+      </button>
+    </nav>
+
+    <div class="main" id="main">
+      <div class="left">
+        <h5>Hey, I am Zhenia</h5>
+        <h3>I am a <span>full-stack programmer</span></h3>
+        <p>
+          I am a full-stack programmer working with both backend and frontend. I
+          work with JavaScript (Node.js), HTML, CSS, and also with AI. I have
+          some experience with GitHub Copilot and ChatGPT 4.
+        </p>
+        <button>Get In Touch</button>
+      </div>
+      <div class="right">
+        <img src="assets/img/me.PNG" />
+      </div>
+    </div>
+
+    <div class="skills" id="skills">
+      <h5>My skills</h5>
+      <h3>What I can do</h3>
+      <div class="skill-item">
+        <div class="item">
+          <div class="icon">
+            <i class="bx bxl-html5"></i>
+            <h4>HTML</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+              odit, dignissimos sequi ab dolor illo nostrum commodi expedita quo
+              nisi, iusto dolorem ipsum, cum similique saepe. Fugit quo omnis
+              numquam.
+            </p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="icon">
+            <i class="bx bxl-css3"></i>
+            <h4>CSS</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Consectetur mollitia hic nulla voluptatum perferendis quis
+              deleniti culpa ex sint ratione quisquam voluptates totam officia,
+              in laboriosam, laudantium dicta repellendus reiciendis!
+            </p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="icon">
+            <i class="bx bxl-javascript"></i>
+            <h4>JavaScript</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptates dignissimos deleniti laudantium dolores totam vero,
+              assumenda, tempore fugiat cupiditate amet quidem? Corporis ad id
+              dolorum recusandae veniam magni eum esse.
+            </p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="icon">
+            <i class="bx bxl-nodejs"></i>
+            <h4>Node.js</h4>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Molestiae error debitis reprehenderit eligendi exercitationem hic
+              possimus expedita, enim veritatis impedit, ipsam soluta culpa
+              mollitia, obcaecati fugiat magnam esse explicabo aperiam!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="about" id="about">
+      <div class="left">
+        <img src="assets/img/about-img.png" />
+      </div>
+      <div class="right">
+        <h5>About</h5>
+        <h3>Who am I?</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit
+          veniam architecto nulla illo doloremque ipsam similique nemo
+          praesentium aperiam neque eos dolore ullam, harum asperiores nobis,
+          provident error laboriosam cupiditate! Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Obcaecati maxime quibusdam voluptatum
+          sint molestias perspiciatis provident expedita optio, voluptate
+          recusandae vel, accusantium ipsam vitae iure corrupti laboriosam rem
+          voluptas nulla!
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Id iusto esse
+          saepe doloribus accusamus provident amet aliquam, illum praesentium
+          aperiam repudiandae assumenda.
+        </p>
+      </div>
+    </div>
+
+    <div class="portfolio" id="portfolio">
+      <div class="header">
+        <div class="info">
+          <h5>Projects</h5>
+          <h3>My portfolio</h3>
+        </div>
+        <a href="https://github.com/daskie911"
+          ><button><i class="bx bxl-github"></i> Check My GitHub</button></a
+        >
+      </div>
+
+      <div class="portfo-items">
+        <div class="item">
+          <img src="assets/img/sc-1.jpg" />
+          <div class="info">
+            <h4>Portfolio #1</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia
+              quidem quo numquam a laudantium.
+            </p>
+            <a href="#">View on GitHub<i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+        <div class="item">
+          <img src="assets/img/sc-2.jpg" />
+          <div class="info">
+            <h4>Site #2</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia
+              quidem quo numquam a laudantium.
+            </p>
+            <a href="#">View on GitHub<i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+        <div class="item">
+          <img src="assets/img/sc-3.jpg" />
+          <div class="info">
+            <h4>Site #3</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia
+              quidem quo numquam a laudantium.
+            </p>
+            <a href="#">View on GitHub<i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="feedback" id="feedback">
+      <h5>Clients Reviews</h5>
+      <h3>Customers Feedback</h3>
+      <div class="customers">
+        <div class="item">
+          <div class="rating">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quod, voluptates, quae, quos quidem dolorum quia voluptatum
+            asperiores, nemo doloremque.
+          </p>
+          <div class="user">
+            <img src="assets/img/us-1.jpg" />
+            <div class="info">
+              <h5>Dianne Russell</h5>
+              <p>Zabka</p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="rating">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quod, voluptates, quae, quos quidem dolorum quia voluptatum
+            asperiores, nemo doloremque.
+          </p>
+          <div class="user">
+            <img src="assets/img/us-2.jpg" />
+            <div class="info">
+              <h5>Kristian Watson</h5>
+              <p>Twitch</p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="rating">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quod, voluptates, quae, quos quidem dolorum quia voluptatum
+            asperiores, nemo doloremque.
+          </p>
+          <div class="user">
+            <img src="assets/img/us-3.jpg" />
+            <div class="info">
+              <h5>Kathryn Murphy</h5>
+              <p>Spotify</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer>
-      <p>Copyright &copy; 2024</p>
+      <div class="top">
+        <div class="logo">
+          <img src="assets/img/logo.png" />
+          <a href="https://github.com/daskie911">Yauheni Buka</a>
+        </div>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">GitHub</a></li>
+          <li><a href="#">Donate</a></li>
+        </ul>
+        <div class="social-links">
+          <a href="#"><i class="bx bxl-instagram"></i></a>
+          <a href="#"><i class="bx bxl-telegram"></i></a>
+          <a href="#"><i class="bx bxl-tiktok"></i></a>
+        </div>
+      </div>
+      <div class="separator"></div>
+      <div class="bottom">
+        <p>
+          Made with ❤ By Yauheni Buka(daskie) Idea from
+          <a href="https://www.youtube.com/watch?v=FcoroQJSJsI&t=1912s">AsmrProg</a>
+        </p>
+        <div class="links">
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms of Service</a>
+          <a href="#">Cookies Settings</a>
+        </div>
+      </div>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
