--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,6 +51,30 @@
       <div class="skill-item">
         <div class="item">
           <div class="icon">
+            <i class="bx bxl-nodejs"></i>
+            <h4>Node.js</h4>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Molestiae error debitis reprehenderit eligendi exercitationem hic
+              possimus expedita, enim veritatis impedit, ipsam soluta culpa
+              mollitia, obcaecati fugiat magnam esse explicabo aperiam!
+            </p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="icon">
+            <i class="bx bxl-javascript"></i>
+            <h4>JavaScript</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptates dignissimos deleniti laudantium dolores totam vero,
+              assumenda, tempore fugiat cupiditate amet quidem? Corporis ad id
+              dolorum recusandae veniam magni eum esse.
+            </p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="icon">
             <i class="bx bxl-html5"></i>
             <h4>HTML</h4>
             <p>
@@ -70,30 +94,6 @@
               Consectetur mollitia hic nulla voluptatum perferendis quis
               deleniti culpa ex sint ratione quisquam voluptates totam officia,
               in laboriosam, laudantium dicta repellendus reiciendis!
-            </p>
-          </div>
-        </div>
-        <div class="item">
-          <div class="icon">
-            <i class="bx bxl-javascript"></i>
-            <h4>JavaScript</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates dignissimos deleniti laudantium dolores totam vero,
-              assumenda, tempore fugiat cupiditate amet quidem? Corporis ad id
-              dolorum recusandae veniam magni eum esse.
-            </p>
-          </div>
-        </div>
-        <div class="item">
-          <div class="icon">
-            <i class="bx bxl-nodejs"></i>
-            <h4>Node.js</h4>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Molestiae error debitis reprehenderit eligendi exercitationem hic
-              possimus expedita, enim veritatis impedit, ipsam soluta culpa
-              mollitia, obcaecati fugiat magnam esse explicabo aperiam!
             </p>
           </div>
         </div>
@@ -248,6 +248,10 @@
         <div class="logo">
           <img src="assets/img/logo.png" />
           <a href="https://github.com/daskie911">Yauheni Buka</a>
+          <div class="contact-me">
+            <p>+123 456 789</p>
+            <p>example@gmail.com</p>
+          </div>
         </div>
         <ul>
           <li><a href="#">Home</a></li>
@@ -265,7 +269,9 @@
       <div class="bottom">
         <p>
           Made with ❤ By Yauheni Buka(daskie) Idea from
-          <a href="https://www.youtube.com/watch?v=FcoroQJSJsI&t=1912s">AsmrProg</a>
+          <a href="https://www.youtube.com/watch?v=FcoroQJSJsI&t=1912s"
+            >AsmrProg</a
+          >
         </p>
         <div class="links">
           <a href="#">Privacy Policy</a>
