Refactor routes and views to use Contact model and update admin and index pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
         <button>Get In Touch</button>
       </div>
       <div class="right">
-        <img src="assets/img/me.PNG" />
+        <img src="assets/img/me.png" />
       </div>
     </div>
 
@@ -170,6 +170,7 @@
             <a href="#">View on GitHub<i class="bx bx-link-external"></i></a>
           </div>
         </div>
+        
       </div>
     </div>
 
@@ -249,8 +250,8 @@
           <img src="assets/img/logo.png" />
           <a href="https://github.com/daskie911">Yauheni Buka</a>
           <div class="contact-me">
-            <p>+123 456 789</p>
-            <p>example@gmail.com</p>
+            <p><%= contact.email %></p>
+            <p><%= contact.phone %></p>
           </div>
         </div>
         <ul>
