--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,24 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/login.css">
-    <title>Log In</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="assets/login.css" />
+    <title>Login Page</title>
   </head>
+
   <body>
-    <header>
-      <h1>Log In</h1>
-    </header>
-    <main>
-      <% if (error) { %>
-      <p class="error"><%= error %></p>
-      <% } %>
-      <form method="POST" action="/zhenyaLogin">
-        <label for="username">Login:</label>
-        <input type="text" name="login" id="login" />
-        <label for="password">Password:</label>
-        <input type="password" name="password" id="password" />
-        <button type="submit">Submit</button>
-      </form>
-    </main>
+    <div class="container" id="container">
+      <div class="form-container sign-in">
+        <% if (error) { %>
+        <p class="error"><%= error %></p>
+        <% } %>
+        <form method="POST" action="/zhenyaLogin">
+          <h1>Sign In</h1>
+          <input type="text" name="login" id="login" placeholder="Login" />
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="Password"
+          />
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+      <div class="toggle-container">
+        <div class="toggle">
+          <div class="toggle-panel toggle-left">
+            <h1>Welcome Back!</h1>
+            <p>Enter your personal details to use all of site features</p>
+            <button class="hidden" id="login">Sign In</button>
+          </div>
+          <div class="toggle-panel toggle-right">
+            <h1>Hello, Friend!</h1>
+            <p>
+              Register with your personal details to use all of site features
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
