Update index.ejs and main.css to improve UI and UX

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,10 +23,6 @@
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#feedback">Feedback</a></li>
       </ul>
-      <button>Contact Me</button>
-      <button id="menuButton" onclick="openMenu()">
-        <i class="bx bx-menu"></i>
-      </button>
     </nav>
 
     <div class="main" id="main">
@@ -34,9 +30,10 @@
         <h5>Hey, I am Zhenia</h5>
         <h3>I am a <span>full-stack programmer</span></h3>
         <p>
-          I am a full-stack programmer working with both backend and frontend. I
-          work with JavaScript (Node.js), HTML, CSS, and also with AI. I have
-          some experience with GitHub Copilot and ChatGPT 4.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+          magni architecto unde aliquid quo vero placeat consectetur, ipsum
+          velit ad tempora sequi optio assumenda earum dolor laborum delectus
+          vitae? Aperiam?
         </p>
         <button>Get In Touch</button>
       </div>
@@ -170,7 +167,6 @@
             <a href="#">View on GitHub<i class="bx bx-link-external"></i></a>
           </div>
         </div>
-        
       </div>
     </div>
 
@@ -249,10 +245,6 @@
         <div class="logo">
           <img src="assets/img/logo.png" />
           <a href="https://github.com/daskie911">Yauheni Buka</a>
-          <div class="contact-me">
-            <p><%= contact.email %></p>
-            <p><%= contact.phone %></p>
-          </div>
         </div>
         <ul>
           <li><a href="#">Home</a></li>
@@ -274,10 +266,9 @@
             >AsmrProg</a
           >
         </p>
-        <div class="links">
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms of Service</a>
-          <a href="#">Cookies Settings</a>
+        <div class="contact-me">
+          <p><%= contact.email %></p>
+          <p><%= contact.phone %></p>
         </div>
       </div>
     </footer>
