--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,13 +33,13 @@
         <div class="toggle">
           <div class="toggle-panel toggle-left">
             <h1>Welcome Back!</h1>
-            <p>Enter your personal details to use all of site features</p>
+            <p>Enter admin personal details</p>
             <button class="hidden" id="login">Sign In</button>
           </div>
           <div class="toggle-panel toggle-right">
             <h1>Hello, Friend!</h1>
             <p>
-              Register with your personal details to use all of site features
+              Enter admin personal details
             </p>
           </div>
         </div>
