--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -44,6 +44,7 @@
             name="description"
             placeholder="Enter Description"
           />
+          <input type="text" name="link" placeholder="Link" />
           <button type="submit">Add Card</button>
         </form>
       </div>
