--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -38,7 +38,7 @@
       <div class="container2">
         <form action="/admin/addCards" method="post">
           <input type="text" name="image" placeholder="Enter Image Url" />
-          <input type="text" name="title" placeholder="Enter Title" />
+          <input type="text" name="title" placeholder="Enter Title" maxlength="20"/>
           <input
             type="text"
             name="description"
