--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
         <% if (skills.length > 0) { %> <% skills.forEach(skill => { %>
         <div class="item">
           <div class="icon">
-            <div class="skill-img"><img src="<%= skill.logo %>" /></div>
+            <img src="<%= skill.logo %>" />
             <h4><%= skill.title %></h4>
             <p><%= skill.description %></p>
           </div>
