--- a/views/assets/admin.css
+++ b/views/assets/admin.css
@@ -1,78 +1,74 @@
-/* Main styles */
-body {
-  font-family: "Arial", sans-serif;
-  background-color: #f0f2f5;
-  margin: 0;
-  padding: 0;
-}
+/* CSS styles for the admin page */
 
+/* Header styles */
 header {
+  background-color: #f2f2f2;
+  padding: 20px;
   text-align: center;
-  padding: 2rem 0;
-  background-color: #ffffff;
-  margin-bottom: 2rem;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 header h1 {
-  margin: 0;
-  color: #333;
+  font-size: 24px;
+  margin-bottom: 10px;
 }
 
 header p {
-  color: #666;
+  font-size: 16px;
+  margin-bottom: 20px;
 }
 
-button {
-  background-color: #5e3bee;
-  color: #fff;
-  border: none;
-  border-radius: 20px;
-  padding: 10px 15px;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background-color 0.3s ease;
-}
-
-button:hover {
-  background-color: #4c32cc;
-}
-
-form {
-  background-color: #fff;
-  border-radius: 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  margin-bottom: 2rem;
-}
-
-input[type="text"],
-input[type="email"] {
-  width: calc(100% - 24px); /* accounting for padding */
-  margin-bottom: 1rem;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  padding: 10px;
-  font-size: 1rem;
+header form {
+  display: inline-block;
 }
 
 /* Container styles */
-.container1,
-.container2 {
-  width: 80%;
-  margin: 0 auto; /* Centers the containers */
+.container1 {
+  margin-bottom: 40px; /* Increased margin-bottom */
 }
 
-/* Responsive styles */
-@media (max-width: 768px) {
-  .container1,
-  .container2 {
-    width: 95%;
-  }
+.container2,
+.container3 {
+  margin-top: 40px;
+  margin-bottom: 40px; /* Increased margin-bottom */
+}
 
-  input[type="text"],
-  input[type="email"],
-  button {
-    width: calc(100% - 20px); /* adjusting width for mobile */
-  }
+/* Form styles */
+form {
+  margin-bottom: 10px;
+}
+
+form input {
+  display: block;
+  margin-bottom: 10px;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+form button {
+  padding: 10px 20px;
+  background-color: #512da8;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* Card styles */
+.container1 input[type="text"] {
+  width: 100%;
+}
+
+.container1 button[type="submit"] {
+  margin-top: 10px;
+}
+
+/* Skill styles */
+.container3 input[type="text"] {
+  width: 100%;
+}
+
+.container3 button[type="submit"] {
+  margin-top: 10px;
 }
