--- a/views/assets/admin.css
+++ b/views/assets/admin.css
@@ -159,6 +159,8 @@ h1 {
   cursor: pointer;
 }
 
+
+
 /* Skill styles */
 
 .container3 {
@@ -174,4 +176,18 @@ h1 {
   width: 100%;
   margin-left: 10px;
   margin-top: 20px;
+}
+
+/* delete skills */
+
+.no-skilss {
+  margin-left: 20px;
+  margin-top: 20px;
+  font-size: 20px;
+  color: rgb(106, 106, 200);
+}
+
+.no-skills button:hover {
+  background-color: #c25346;
+  color: #fff;
 }
