--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -16,6 +16,7 @@
       </form>
     </header>
     <main>
+      <!-- edit contacts -->
       <% contacts.forEach(contact => { %>
       <div class="background-color"><h1>Edit Contacts</h1></div>
 
@@ -36,14 +37,16 @@
           <button type="submit">Add Changes</button>
         </form>
       </div>
-
       <% }); %>
+      <!-- end of edit contacts -->
+
       <hr />
       <br />
+
+      <!-- edit and delete card -->
       <div class="background-color"><h1>Edit and Delete Card</h1></div>
       <div class="portfolio" id="portfolio">
         <div class="portfo-items">
-          <!-- portfolio -->
           <% if (cards.length > 0) { %> <% cards.forEach(card => { %>
           <div class="item">
             <img src="<%= card.image %>" />
@@ -145,28 +148,46 @@
           <!-- delete skill -->
 
           <% if (skills.length > 0) { %> <% skills.forEach(skill => { %>
+
           <div class="item">
             <img src="<%= skill.logo %>" />
             <form action="/admin/deleteSkill/<%= skill._id %>" method="post">
               <button type="submit">Delete</button>
             </form>
+            <!-- edit skill -->
+            <form action="/admin/editSkill/<%= skill._id %>" method="post">
+              <div class="inputs">
+                <p>Icon</p>
+                <input
+                  type="text"
+                  name="logo"
+                  placeholder="Enter Image Url"
+                  value="<%= skill.logo %>"
+                />
+                <p>Title</p>
+                <input
+                  type="text"
+                  name="title"
+                  placeholder="Enter Title"
+                  value="<%= skill.title %>"
+                />
+                <p>Description</p>
+                <input
+                  type="text"
+                  name="description"
+                  placeholder="Enter Description"
+                  value="<%= skill.description %>"
+                />
+              </div>
+              <button type="submit">Add Changes</button>
+            </form>
           </div>
           <% }); %> <% } else { %>
-          <div class="no-skills">
-            <h3>No skills here</h3>
-          </div>
-
+          <h3>No skills here</h3>
           <% } %>
         </div>
       </div>
-      <!-- end of add new skill -->
 
-      <!-- all skills -->
-      <% if (skills.length > 0) { %> <% skills.forEach(skill => { %>
-      <div class="item">
-        <img src="<%= skill.logo %>" />
-      </div>
-      <% }); %> <% } %>
       <!-- end of add new skill -->
     </main>
   </body>
